<resources>
    <string name="app_name">Video Record</string>
    <string name="reset">Reset</string>
    <string name="switch_camera">Switch</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="done">Done</string>
    <string name="video_path">Video path:</string>
    <string name="video_too_short">Video is too short.</string>
    <string name="initiating">Initiating…</string>
    <string name="processing">Processing…</string>
    <string name="please_wait">Please wait</string>
    <string name="permissions_denied_exit">Permissions denied, exit.</string>
    <string name="flip">Flip</string>
    <string name="timer">Timer</string>
    <string name="flash">Flash</string>
    <string name="gallery">Gallery</string>
</resources>
